Add viewer to the app.

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
+
+  font-family: Avenir-Roman, sans-serif;
   color:white;
   margin: 0;
   background-color: #040714;
+}
+
+* {
+  box-sizing: border-box;
 }
